fix number spacing on double-digit task list numbers

--- a/components/TaskList.module.scss
+++ b/components/TaskList.module.scss
@@ -13,11 +13,10 @@
 
 .sectionNumber {
   display: table-cell;
-  padding-right: 5px;
+  padding-right: 10px;
 
   @include govuk-media-query($from: tablet) {
     min-width: govuk-spacing(6);
-    padding-right: 0;
   }
 }
 
